<resources>
    <string name="app_name">Nature\'s Arm</string>
        <string name="read_permission">Read External storage permission</string>
        <string name="enable_permission">Please enable access to the external storage.</string>
        <string name="disables_permission">You have disabled to read external storage permission</string>
        <string name="cameraPermission">camera permission granted</string>
        <string name="no_cameraPermission">camera permission denied</string>
        <string name="warning">You should fill everything!</string>

        <string name="plantArrayList" translatable="false">plantArrayList</string>
        <string name="plantListIntent" translatable="false">plantListIntent</string>
        <string name="editedPlant" translatable="false">editedPlant</string>
        <string name="newPlant" translatable="false">newPlant</string>
        <string name="deletedPlant" translatable="false">deletedPlant</string>

    <string name="icon_my_plants">My Plants</string>
    <string name="saveQRButton_content" translatable="false">saveQRButton</string>
    <string name="newplantImageView_content" translatable="false">newplantImageView</string>
    <string name="plantImageView_content" translatable="false">plantImageView</string>
        <string name="plant_name">Plant name…</string>
        <string name="plant_desc">Description…</string>
        <string name="plant_loc">Location…</string>
        <string name="plant_water">Watering \n frequency… (days)</string>
        <string name="plant_fert">Fertilization \n frequency… (days)</string>
        <string name="plant_trans">Transplantation \n frequency… (days)</string>

        <string name="edit_button">EDIT</string>
        <string name="qr_save_toast">Plant\'s QR code is downloading…</string>
        <string name="delete_button">DELETE</string>
        <string name="save_button">SAVE</string>
        <string name="gen_qr_button">GENERATE</string>
        <string name="mediastoreIOException">Failed to create new MediaStore record.</string>
        <string name="outputstreamIOException">Failed to get output stream.</string>
        <string name="bitmapIOException">Failed to save bitmap.</string>
        <string name="error">Error</string>
    <string name="icon_lux">Light meter</string>
        <string name="light_meter_lux">LUX</string>
        <string name="light_meter_fc">FC</string>
        <string name="warning_lux">Device do not have light sensor!</string>
    <string name="icon_qr">QR code reader</string>
        <string name="warning_qr">Unsuccessful…</string>
    <string name="icon_todo">TODO list</string>

    <string name="title_settings">Settings</string>
    <string name="settingImageView_content" translatable="false">settingImageView</string>
        <string name="themeValue" translatable="false">value</string>
        <string name="themeSharable" translatable="false">save</string>
        <string name="language">Language</string>
        <string name="textAutoCompleteTextView">Select language…</string>
        <string name="erase">Database</string>
        <string name="erase_button">Erase database content</string>
        <string name="toast_yes">Data has been erased from the database!</string>
        <string name="toast_no">Data has NOT been erased from the database!</string>
        <string name="erase_alertDialog">Are you sure you want to erase all the data from the database?</string>
        <string name="erase_alertDialog_yes">Yes</string>
        <string name="erase_alertDialog_no">No</string>
        <string name="theme">Theme</string>
        <string name="light">Light</string>
        <string name="dark">Dark</string>

    <string name="title_activity_maps">Map</string>

    <string-array name="languages">
        <item>hu,Hungarian</item>
        <item>en,English</item>
        <item>es,Spanish</item>
        <item>ru,Russian</item>
    </string-array>
    <string name="languageDelimeter" translatable="false">,</string>
    <string name="defLanguage" translatable="false">en</string>
    <string name="languageKey" translatable="false">Language</string>

    <string name="imageType" translatable="false">image/jpeg</string>
    <string name="imageDatePattern" translatable="false">yyyyMMdd_HHmmss</string>
    <string name="imagePrefix" translatable="false">JPEG_</string>
    <string name="imageDelimeter" translatable="false">_</string>
    <string name="imageFormat" translatable="false">.jpg</string>
    <string name="photoPickerType" translatable="false">image/*</string>
    <string name="qrDelimeter" translatable="false">|</string>
</resources>
