<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/saveQRButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_shape_oval"
                android:elevation="10dp"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_qr_icon"
                android:contentDescription="@string/saveQRButton_content" />

        </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:adjustViewBounds="true"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bubble_shape"
            android:textAppearance="@style/TextAppearance"
            android:text="@string/plant_name"
            android:drawablePadding="10dp"
            app:drawableLeftCompat="@drawable/ic_name" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bubble_shape"
            android:textAppearance="@style/TextAppearance"
            android:text="@string/plant_desc"
            android:drawablePadding="10dp"
            app:drawableLeftCompat="@drawable/ic_description" />

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bubble_shape"
            android:textAppearance="@style/TextAppearance"
            android:text="@string/plant_loc"
            android:drawablePadding="10dp"
            app:drawableLeftCompat="@drawable/ic_edit_location" />

        <TextView
            android:id="@+id/waterTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bubble_shape"
            android:textAppearance="@style/TextAppearance"
            android:text="@string/plant_water"
            android:drawablePadding="10dp"
            app:drawableLeftCompat="@drawable/ic_water" />

        <TextView
            android:id="@+id/fertilizeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bubble_shape"
            android:textAppearance="@style/TextAppearance"
            android:text="@string/plant_fert"
            android:drawablePadding="10dp"
            app:drawableLeftCompat="@drawable/ic_plant_food" />

        <TextView
            android:id="@+id/transplatTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bubble_shape"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            android:text="@string/plant_trans"
            android:textAppearance="@style/TextAppearance"
            android:textSize="20sp"
            android:drawablePadding="10dp"
            app:drawableLeftCompat="@drawable/ic_transplant" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/edit_button"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:layout_weight="1"
            android:text="@string/delete_button"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:textStyle="bold" />
    </LinearLayout>

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>