<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/lightActivity"
    android:background="@color/DarkColor">

    <TextView
        android:id="@+id/lightMeterTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textAppearance="@style/TextAppearance"
        android:text="@string/icon_lux"
        android:textAlignment="textStart"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lightMeterTextView">

        <TextView
            android:id="@+id/editTextNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="60dp"
            android:textAppearance="@style/TextAppearance"
            android:textSize="70sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/fc_lux_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="60dp"
            android:scaleX="4"
            android:scaleY="4"
            android:showText="true"
            android:switchTextAppearance="@style/TextAppearance"
            android:textOff="@string/light_meter_lux"
            android:textOn="@string/light_meter_fc"
            android:thumb="@drawable/rectangle_thumb"
            android:track="@drawable/rectangle_track"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>