<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/galleryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/button_shape_oval"
                    android:elevation="10dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    app:srcCompat="@drawable/ic_add_from_gallery"
                    tools:ignore="ContentDescription" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/button_shape_oval"
                    android:elevation="10dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    app:srcCompat="@drawable/ic_add_a_photo"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                android:orientation="vertical"
                android:padding="0dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="5dp"
                    app:srcCompat="@drawable/demo_plant"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/newplantImageView_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bubble_shape"
                    android:drawableStart="@drawable/ic_name"
                    android:drawablePadding="10dp"
                    android:hint="@string/plant_name"
                    android:inputType="textMultiLine"
                    android:paddingStart="15dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/primaryLightColor"
                    android:textSize="24sp"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/descriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bubble_shape"
                    android:drawableStart="@drawable/ic_description"
                    android:drawablePadding="10dp"
                    android:hint="@string/plant_desc"
                    android:inputType="textMultiLine"
                    android:paddingStart="15dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/primaryLightColor"
                    android:textSize="24sp"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/locationEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bubble_shape"
                    android:drawableStart="@drawable/ic_edit_location"
                    android:drawablePadding="10dp"
                    android:hint="@string/plant_loc"
                    android:inputType="textMultiLine"
                    android:paddingStart="15dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/primaryLightColor"
                    android:textSize="24sp"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/waterEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bubble_shape"
                    android:drawableStart="@drawable/ic_water"
                    android:drawablePadding="10dp"
                    android:hint="@string/plant_water"
                    android:inputType="numberSigned|textMultiLine"
                    android:paddingStart="15dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/primaryLightColor"
                    android:textSize="24sp"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/fertilizeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bubble_shape"
                    android:drawableStart="@drawable/ic_plant_food"
                    android:drawablePadding="10dp"
                    android:hint="@string/plant_fert"
                    android:inputType="numberSigned|textMultiLine"
                    android:paddingStart="15dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/primaryLightColor"
                    android:textSize="24sp"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/transplatEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bubble_shape"
                    android:drawableStart="@drawable/ic_transplant"
                    android:drawablePadding="10dp"
                    android:hint="@string/plant_trans"
                    android:inputType="numberSigned|textMultiLine"
                    android:paddingStart="15dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/primaryLightColor"
                    android:textSize="24sp"
                    android:autofillHints="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/save_button"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>